<resources>
    <string name="app_name">R Routes</string>
    <string name="title_activity_maps">R Routes</string>
    <string name="title_activity_maps_source_to_target">R Routes</string>
    <string name="title_activity_maps_client">R Routes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">User Name/Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="this_is_where_the_magic_happens">This is where the magic happens</string>
    <string name="powerby_rameshwor">Powerby@Rameshwor</string>
    <string name="logout">logout</string>
    <string name="login_failed">"Login failed"</string>
    <string name="driver">Driver</string>
    <string name="user">User</string>
</resources>
